fix cursor in system name, add box-shadow to breadcrumbes, fix circle padding in user name, fix user dropdown position on small screens

--- a/src/styles/_dictionaries.component.scss
+++ b/src/styles/_dictionaries.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 0;
-    width: calc(100vw - 40px);
+    width: calc(100vw - 30px);
 
     .dictionary {
         height: 100px;
