--- a/src/styles/_title.component.scss
+++ b/src/styles/_title.component.scss
@@ -3,6 +3,7 @@
     display: flex;
     padding: 0 20px;
     overflow: hidden;
+    cursor: pointer;
 
     .title-text-wrapper {
         display: inline-block;
