--- a/src/styles/_user.component.scss
+++ b/src/styles/_user.component.scss
@@ -9,7 +9,6 @@
         top: -24px;
         font-size: 14px;
         line-height: 20px;
-        margin-right: 10px;
         display: inline-block;
     }
 
